--- a/main.css
+++ b/main.css
@@ -43,7 +43,8 @@ iframe
 {
     position: relative;
     margin-top: 60px; 
-    width: 100%;
+    width: auto;
+    height: auto;
 }
 #underline
 {
