--- a/main.css
+++ b/main.css
@@ -45,6 +45,8 @@ iframe
     margin-top: 60px; 
     width: auto;
     height: auto;
+    max-width: 400%;
+    max-height: 1000%;
 }
 #underline
 {
