--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ iframe
 {
     position: relative;
     margin-top: 60px; 
-    width: auto;
+    width: 100%;
     height: auto;
     max-width: 400%;
     max-height: 1000%;
