--- a/main.css
+++ b/main.css
@@ -42,7 +42,11 @@ li a:hover
 iframe
 {
     position: relative;
-    margin-top: 60px;
+    margin-top: 60px; 
+    width: 100%;
+    height: auto;
+    max-width: 400%;
+    max-height: 1000%;
 }
 #underline
 {
