--- a/_Imports.razor
+++ b/_Imports.razor
@@ -3,7 +3,8 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using danicus2000000.github.io
-@using danicus2000000.github.io.Shared
+@using Danicus2000000.github.io
+@using Danicus2000000.github.io.Layout
