--- a/_Imports.razor
+++ b/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Danicus2000000.github.io
-@using Danicus2000000.github.io.Layout
+@using PortfolioWebsite
+@using PortfolioWebsite.Layout
