--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -19,6 +19,11 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="projects">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Projects
+            </NavLink>
+        </div>
     </nav>
 </div>
 
