Updated website with remaining pages of interest

--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -2,6 +2,13 @@
 
 <PageTitle>Counter</PageTitle>
 
+<head>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://danicus2000000.github.io/Counter">
+    <meta property="og:title" content="Counter">
+    <meta property="og:description" content="A simple counting function built into blazor.">
+    <meta property="og:image" content="https://danicus2000000.github.io/favicon.png">
+</head>
 <h1>Counter</h1>
 
 <p role="status">Current count: @currentCount</p>
