--- a/Pages/Projects.razor
+++ b/Pages/Projects.razor
@@ -2,6 +2,14 @@
 
 <PageTitle>Projects</PageTitle>
 
+<head>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://danicus2000000.github.io/Projects">
+    <meta property="og:title" content="My Projects">
+    <meta property="og:description" content="A page displaying projects of interest.">
+    <meta property="og:image" content="https://danicus2000000.github.io/favicon.png">
+</head>
+
 <h1>Projects</h1>
 
 <h3><a href="https://github.com/Danicus2000000/Password-checker" target="_blank" id="underline">Password Checker</a></h3>
