--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -2,6 +2,14 @@
 
 <PageTitle>Home</PageTitle>
 
+<head>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://danicus2000000.github.io">
+    <meta property="og:title" content="My Portfolio">
+    <meta property="og:description" content="A website all about me!">
+    <meta property="og:image" content="https://danicus2000000.github.io/favicon.png">
+</head>
+
 <h1>Hello, world!</h1>
 
 <p>My name is Dan and I am a Software Development Engineer!</p>
