--- a/Layout/MainLayout.razor.css
+++ b/Layout/MainLayout.razor.css
@@ -9,7 +9,7 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, rgb(6, 71, 14) 0%, #77fc03 70%);
 }
 
 .top-row {
