Added email me button

--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Projects
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="mailto:testertestington940@gmail.com">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Email Me
+            </NavLink>
+        </div>
     </nav>
 </div>
 
