--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Email Me
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="https://thelanbeforetimes.wordpress.com/">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> My Blog
+            </NavLink>
+        </div>
     </nav>
 </div>
 
