--- a/src/App.css
+++ b/src/App.css
@@ -450,12 +450,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1.1em;
+  color: #FFFFFF;
 }
 .proj-txtx span {
   font-style: italic;
   font-weight: 400;
   font-size: 15px;
   letter-spacing: 0.8px;
+  color: #FFFFFF;
 }
 .background-image-right {
   top: 20%;
