--- a/src/App.css
+++ b/src/App.css
@@ -422,7 +422,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .proj-imgbx {
   position: relative;
   border-radius: 30px;
-  overflow: hidden;
+  overflow: scroll;
+  margin-bottom: 24px;
+}
+.proj-colbx
+{
+  overflow: scroll;
+  max-height: 250px;
   margin-bottom: 24px;
 }
 .proj-imgbx::before {
